overlapping conflict resolved

--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@
   
   body {
     font-family: "Poppins", sans-serif;
+    /* padding-top: 60px; */
+    /* scroll-padding-top: 100vh; */
   }
   .scroll-top-btn {
     position: fixed; /* Fixed position */
@@ -79,6 +81,7 @@
     position: sticky;
     top: 0%;
     z-index: 5;
+    /* scroll-padding-top: 10vh; */
   }
   
   nav {
@@ -86,6 +89,7 @@
     width: 90%;
     margin: auto;
     padding: 2rem;
+    /* padding: 1px; */
     min-height: 10vh;
     align-items: center;
     flex-wrap: wrap;
@@ -198,6 +202,8 @@
     align-items: center;
     position: relative;
     overflow: hidden;
+    scroll-margin-top: 10vh;
+    /* padding:20px; */
   }
   
   .locations-head {
@@ -268,6 +274,10 @@
   .benefits-head h3 {
     padding: 1rem;
   }
+
+  #benefits{
+    scroll-margin-top: 15vh;
+  }
   
   .cards {
     width: 90%;
@@ -319,6 +329,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    scroll-margin-top: 10vh;
   }
   
   .form-wrapper {
@@ -503,9 +514,10 @@ body.dark-mode {
 
 /* itineraries */
 .itineraries-section {
-  padding: 50px;
+  padding: 50px 50px 90px 50px;
   background-color: #f4f4f4;
   text-align: center;
+  scroll-margin-top: 15vh;
 }
 
 .itineraries-section h2 {
@@ -519,6 +531,7 @@ body.dark-mode {
   flex-wrap: wrap;
   justify-content: space-around;
   gap: 20px;
+  padding:70px;
   color: #003366;
   margin-top: 20px;
 }
@@ -585,8 +598,9 @@ body.dark-mode {
 
 /* user rating */
 .reviews-section {
-  padding: 50px;
+  padding: 30px;
   background-color: #f4f4f4;
+  scroll-margin-top: 15vh;
 }
 
 .reviews-section h2 {
@@ -599,7 +613,8 @@ body.dark-mode {
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  margin-bottom: 30px;
+  margin-bottom: 15px;
+  margin-top:15px;
 }
 
 .review-form h3 {
